Fix share link modal button alignment

--- a/scss/common/_share.scss
+++ b/scss/common/_share.scss
@@ -31,6 +31,7 @@
 
   .reply-as-new-topic {
     float: right;
+    margin-top: 0;
     margin-right: ($card-inner-spacer-x * -1);
 
     a {
